# openloopol08

./: .dockerignore  .gitignore  PROJECT_DEEP_DIVE.md  README.md  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.online.yml  docker-compose.yml  help.md  install.bat  mock_backend.py  package-lock.json  run.bat  smoke_test.py  vigilens-v1.5-patch.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/agents/: graph.py  state.py
backend/agents/nodes/: context_analyser.py  deepfake_detector.py  geolocation_hunter.py  notification_node.py  orchestrator.py  source_hunter.py
backend/agents/tools/: api_integrations.py  comment_fetcher.py  ffmpeg_tools.py  metadata_db.py  ocr_tools.py  reverse_search.py  whisper_tools.py
backend/api/: job_store.py  main.py  models.py
backend/api/routes/: analyze.py  health.py  live_feed.py  register.py  status.py
backend/config/: settings.py
backend/docker/: Dockerfile.backend  Dockerfile.deepsafe  deepsafe_config.json
backend/ml/: disaster_classifier.py  scoring_engine.py  sos_engine.py
backend/notifications/: geofence.py  sms_service.py  user_registry.py
backend/services/: social_monitor.py  telegram_alerts.py  video_registry.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_api_integrations.py  test_context_analyser.py  test_deepfake.py  test_notifications.py  test_source_hunter.py
frontend/: .env.example  .env.local.example  Dockerfile  Dockerfile.dev  biome.json  next.config.ts  package-lock.json  package.json
scratch/: check_gemini.py  check_models.py
(+57 files in other folders)
